# get-papers-cli

./: .gitignore  README.md  covid.csv  pyproject.toml  results.csv
get/: cli.py  parser.py  pubmed_client.py  utils.py
